# REU-2024-ACTor2

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/camera_publisher_pkg/: .catkin  .rosinstall
devel/.private/catkin_simple/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/dbw_test_pkg/: .catkin  setup.sh
devel/.private/dyn_rcfg0_pkg/: .catkin  .rosinstall  setup.sh
devel/.private/ethz_piksi_ros/: .catkin  local_setup.sh
devel/.private/follow_line_pkg/: .catkin  local_setup.sh
devel/.private/libsbp_catkin/: .catkin  .rosinstall  setup.sh
devel/.private/libserialport_catkin/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/piksi_multi_rtk_ros/: .catkin  .rosinstall  setup.sh
devel/.private/piksi_pps_sync/: .catkin  local_setup.sh  setup.sh
devel/.private/piksi_rtk_kml/: .catkin  .rosinstall
devel/.private/piksi_rtk_msgs/: .catkin  local_setup.sh
devel/.private/rqt_gps_rtk_plugin/: .catkin  .rosinstall  setup.sh
devel/.private/simple_camera_publisher/: .catkin  local_setup.sh  setup.sh
devel/.private/simple_sim/: .catkin  .rosinstall
devel/.private/simple_sim_atrium/: .catkin  local_setup.sh  setup.sh
devel/.private/workshop/: .catkin  .rosinstall
devel/include/: libserialport.h
devel/include/follow_line_pkg/: FollowLaneConfig.h  FollowLineConfig.h
devel/include/libsbp/: acquisition.h  bootload.h  common.h  edc.h  ext_events.h  file_io.h  flash.h  gnss.h  imu.h  linux.h  logging.h  mag.h  navigation.h  ndb.h  observation.h  orientation.h  piksi.h  sbas.h  sbp.h  sbp_handler.hpp  settings.h  ssr.h  system.h  tracking.h  user.h  vehicle.h  version.h
devel/include/piksi_rtk_msgs/: AgeOfCorrections.h  BasePosEcef.h  BasePosLlh.h  BaselineEcef.h  BaselineHeading.h  BaselineNed.h  DeviceMonitor_V2_3_15.h  Dops.h  DopsMulti.h  EnuOrigin.h  EnuOriginRequest.h  EnuOriginResponse.h  ExtEvent.h  GpsTime.h  GpsTimeMulti.h  Heartbeat.h  ImuAuxMulti.h  ImuRawMulti.h  InfoWifiCorrections.h  Log.h  MagRaw.h  MeasurementState_V2_4_1.h  Observation.h  PosEcef.h  PosEcefCov.h  PosLlh.h  PosLlhCov.h  PosLlhMulti.h  PositionSampling.h  PositionWithCovariance.h  PositionWithCovarianceStamped.h  ReceiverState.h  ReceiverState_V2_2_15.h  ReceiverState_V2_3_15.h  ReceiverState_V2_4_1.h  ReceiverState_V2_6_5.h  SamplePosition.h  SamplePositionRequest.h  SamplePositionResponse.h  SettingsReadReq.h  (+21 more)
devel/include/rqt_gps_rtk_plugin/: ui_gps_rtk_plugin.h
devel/include/simple_sim/: SimpleSimConfig.h
devel/include/workshop/: AutoDriveDynCfgConfig.h  BarrelDynCfgConfig.h  BarrelLidarDynCfgConfig.h  CrosswalkDynCfgConfig.h  LaneCenterDynCfgConfig.h  LineFollowDynCfgConfig.h
devel/lib/: libserialport.la  libserialport.so.0  libserialport.so.0.1.0
devel/lib/piksi_multi_rtk_ros/: geodetic_survey  piksi_multi
devel/lib/piksi_pps_sync/: evaluate_pps
devel/lib/piksi_rtk_kml/: piksi_rtk_kml
devel/lib/pkgconfig/: camera_publisher_pkg.pc  catkin_simple.pc  catkin_tools_prebuild.pc  dbw_test_pkg.pc  dyn_rcfg0_pkg.pc  follow_line_pkg.pc  libsbp_catkin.pc  libserialport.pc  libserialport_catkin.pc  piksi_multi_rtk_ros.pc  (+8 more)
logs/follow_line_pkg/: build.make.001.log.stderr
logs/libsbp_catkin/: build.cmake.001.log.stderr  build.make.000.log.stderr
logs/libsbp_ros_msgs/: build.cmake.000.log.stderr
logs/libserialport_catkin/: build.cmake.002.log.stderr  build.make.000.log.stderr
logs/simple_camera_publisher/: build.check.011.log.stderr  build.cmake.000.log.stderr
src/: .rosinstall  .rosinstall.bak
src/dbw_test_pkg/: CMakeLists.txt
src/dyn_rcfg0_pkg/: CMakeLists.txt
src/hello_world_gps/: CMakeLists.txt  package.xml
src/hello_world_gps/launch/: hello_world_gps.launch
src/hello_world_gps/scripts/: hello_world_gps.py
(+798 files in other folders)
