<?xml version="1.0"?>
<package format="2">
  <name>hello_gps_package</name>
  <version>0.0.1</version>
  <description>The hello_gps_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jdombecki@ltu.edu">Justin Dombecki</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="jdombecki@ltu.edu">Justin Dombecki</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>piksi_rtk_msgs</build_depend>
  <build_depend>libsbp_ros_msgs</build_depend>
  <build_depend>piksi_multi_cpp</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>piksi_rtk_msgs</build_export_depend>
  <build_export_depend>libsbp_ros_msgs</build_export_depend>
  <build_export_depend>piksi_multi_cpp</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>piksi_rtk_msgs</exec_depend>
  <exec_depend>libsbp_ros_msgs</exec_depend>
  <exec_depend>piksi_multi_cpp</exec_depend>
</package>
